--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,11 @@ spring:
     username: test
     password: test
     driver-class-name: org.postgresql.Driver
+
+#    url: jdbc:h2:mem:authdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: none
@@ -16,8 +21,9 @@ spring:
     properties:
       hibernate:
         default_schema: auth_service
+      #   dialect: org.hibernate.dialect.H2Dialect#  //
   flyway:
-    schemas: auth_service
+    schemas: auth_service #  //
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
